--- a/projet_ST7/phase_2/gmplot_fichiers_phase1/Bordeaux_gmplot.html
+++ b/projet_ST7/phase_2/gmplot_fichiers_phase1/Bordeaux_gmplot.html
@@ -8,7 +8,7 @@
     function initialize() {
         var map = new google.maps.Map(document.getElementById("map_canvas"), {
             zoom: 10,
-            center: new google.maps.LatLng(45.164561, -0.792230)
+            center: new google.maps.LatLng(45.144782, -0.794907)
         });
 
         var marker_icon_FF0000 = {
@@ -18,105 +18,120 @@
 
         new google.maps.Marker({
             position: new google.maps.LatLng(45.151218, -0.822093),
-            title: "0",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.292914, -0.936536),
-            title: "T9",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.044423, -0.668761),
-            title: "T5",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.081462, -0.806245),
-            title: "T10",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.199575, -0.746208),
-            title: "T6",
+            title: "Valentin",
+            label: "D",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(45.144215, -0.734257),
-            title: "T3",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.264808, -0.771789),
-            title: "T4",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.151218, -0.822093),
-            title: "-1",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.151218, -0.822093),
-            title: "0",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(44.936309, -0.830941),
-            title: "0",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(44.967501, -0.608685),
-            title: "T2",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.397698, -0.966819),
-            title: "T7",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(44.556549, -0.319392),
-            title: "T1",
+            title: "Valentin",
+            label: "T3",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(45.023479, -0.807213),
-            title: "T8",
+            title: "Valentin",
+            label: "T8",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.044423, -0.668761),
+            title: "Valentin",
+            label: "T5",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.292914, -0.936536),
+            title: "Valentin",
+            label: "T9",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.199575, -0.746208),
+            title: "Valentin",
+            label: "T6",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.151218, -0.822093),
+            title: "Valentin",
+            label: "-1",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.151218, -0.822093),
+            title: "Valentin",
+            label: "0",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(44.936309, -0.830941),
-            title: "0",
+            title: "Ambre",
+            label: "D",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(44.556549, -0.319392),
+            title: "Ambre",
+            label: "T1",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(44.967501, -0.608685),
+            title: "Ambre",
+            label: "T2",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.397698, -0.966819),
+            title: "Ambre",
+            label: "T7",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.081462, -0.806245),
+            title: "Ambre",
+            label: "T10",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.264808, -0.771789),
+            title: "Ambre",
+            label: "T4",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(44.936309, -0.830941),
+            title: "Ambre",
+            label: "0",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -130,12 +145,11 @@
             map: map,
             path: [
                 new google.maps.LatLng(45.151218, -0.822093),
-                new google.maps.LatLng(45.292914, -0.936536),
-                new google.maps.LatLng(45.044423, -0.668761),
-                new google.maps.LatLng(45.081462, -0.806245),
-                new google.maps.LatLng(45.199575, -0.746208),
                 new google.maps.LatLng(45.144215, -0.734257),
-                new google.maps.LatLng(45.264808, -0.771789),
+                new google.maps.LatLng(45.023479, -0.807213),
+                new google.maps.LatLng(45.044423, -0.668761),
+                new google.maps.LatLng(45.292914, -0.936536),
+                new google.maps.LatLng(45.199575, -0.746208),
                 new google.maps.LatLng(45.151218, -0.822093),
                 new google.maps.LatLng(45.151218, -0.822093),
             ]
@@ -150,10 +164,11 @@
             map: map,
             path: [
                 new google.maps.LatLng(44.936309, -0.830941),
+                new google.maps.LatLng(44.556549, -0.319392),
                 new google.maps.LatLng(44.967501, -0.608685),
                 new google.maps.LatLng(45.397698, -0.966819),
-                new google.maps.LatLng(44.556549, -0.319392),
-                new google.maps.LatLng(45.023479, -0.807213),
+                new google.maps.LatLng(45.081462, -0.806245),
+                new google.maps.LatLng(45.264808, -0.771789),
                 new google.maps.LatLng(44.936309, -0.830941),
             ]
         });
