--- a/projet_ST7/phase_2/gmplot_fichiers_phase2/Bordeaux_gmplot.html
+++ b/projet_ST7/phase_2/gmplot_fichiers_phase2/Bordeaux_gmplot.html
@@ -8,7 +8,7 @@
     function initialize() {
         var map = new google.maps.Map(document.getElementById("map_canvas"), {
             zoom: 10,
-            center: new google.maps.LatLng(45.193595, -0.807867)
+            center: new google.maps.LatLng(45.162111, -0.793148)
         });
 
         var marker_icon_FF0000 = {
@@ -33,14 +33,6 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(45.264808, -0.771789),
-            title: "Valentin",
-            label: "T4",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
             position: new google.maps.LatLng(45.199575, -0.746208),
             title: "Valentin",
             label: "T6",
@@ -52,6 +44,14 @@
             position: new google.maps.LatLng(45.144215, -0.734257),
             title: "Valentin",
             label: "T3",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.044423, -0.668761),
+            title: "Valentin",
+            label: "T5",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -81,9 +81,25 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(45.023479, -0.807213),
+            position: new google.maps.LatLng(44.967501, -0.608685),
             title: "Ambre",
-            label: "T8",
+            label: "T2",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.264808, -0.771789),
+            title: "Ambre",
+            label: "T4",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(45.397698, -0.966819),
+            title: "Ambre",
+            label: "T7",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -97,9 +113,9 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(44.967501, -0.608685),
+            position: new google.maps.LatLng(45.023479, -0.807213),
             title: "Ambre",
-            label: "T2",
+            label: "T8",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -122,9 +138,9 @@
             path: [
                 new google.maps.LatLng(45.151218, -0.822093),
                 new google.maps.LatLng(45.292914, -0.936536),
-                new google.maps.LatLng(45.264808, -0.771789),
                 new google.maps.LatLng(45.199575, -0.746208),
                 new google.maps.LatLng(45.144215, -0.734257),
+                new google.maps.LatLng(45.044423, -0.668761),
                 new google.maps.LatLng(45.151218, -0.822093),
                 new google.maps.LatLng(45.151218, -0.822093),
             ]
@@ -139,9 +155,11 @@
             map: map,
             path: [
                 new google.maps.LatLng(44.936309, -0.830941),
-                new google.maps.LatLng(45.023479, -0.807213),
-                new google.maps.LatLng(45.081462, -0.806245),
                 new google.maps.LatLng(44.967501, -0.608685),
+                new google.maps.LatLng(45.264808, -0.771789),
+                new google.maps.LatLng(45.397698, -0.966819),
+                new google.maps.LatLng(45.081462, -0.806245),
+                new google.maps.LatLng(45.023479, -0.807213),
                 new google.maps.LatLng(44.936309, -0.830941),
             ]
         });
