'push_modif_du_31_mars'

--- a/projet_ST7/phase_2/gmplot_fichiers_phase2/Australia_gmplot.html
+++ b/projet_ST7/phase_2/gmplot_fichiers_phase2/Australia_gmplot.html
@@ -8,7 +8,7 @@
     function initialize() {
         var map = new google.maps.Map(document.getElementById("map_canvas"), {
             zoom: 10,
-            center: new google.maps.LatLng(40.120507, -2.664585)
+            center: new google.maps.LatLng(-37.055025, 145.211762)
         });
 
         var marker_icon_FF0000 = {
@@ -17,152 +17,112 @@
         };
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.164474, -2.587292),
-            title: "Juan",
+            position: new google.maps.LatLng(-37.313914, 145.735695),
+            title: "John",
             label: "D",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.166813, -2.571247),
-            title: "Juan",
-            label: "T11",
+            position: new google.maps.LatLng(-36.921593, 145.219754),
+            title: "John",
+            label: "T4",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.031162, -2.680993),
-            title: "Juan",
-            label: "T20",
+            position: new google.maps.LatLng(-36.738221, 144.598415),
+            title: "John",
+            label: "T8",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.096582, -2.711648),
-            title: "Juan",
-            label: "-1",
+            position: new google.maps.LatLng(-36.987485, 144.769250),
+            title: "John",
+            label: "T9",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.056521, -2.725410),
-            title: "Juan",
-            label: "T17",
+            position: new google.maps.LatLng(-37.313914, 145.735695),
+            title: "John",
+            label: "0",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.117044, -2.812485),
-            title: "Juan",
-            label: "T5",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(40.166987, -2.640314),
-            title: "Juan",
+            position: new google.maps.LatLng(-36.102979, 145.494369),
+            title: "Sam",
             label: "T1",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.164474, -2.587292),
-            title: "Juan",
-            label: "0",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(40.208176, -2.679742),
-            title: "Maria",
-            label: "D",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(40.299072, -3.247438),
-            title: "Maria",
-            label: "T24",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(40.218255, -3.107292),
-            title: "Maria",
-            label: "T18",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(40.100519, -3.395876),
-            title: "Maria",
-            label: "T13",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(40.012866, -3.605057),
-            title: "Maria",
+            position: new google.maps.LatLng(-36.145489, 144.745313),
+            title: "Sam",
             label: "-1",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.208176, -2.679742),
-            title: "Maria",
-            label: "0",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(40.051849, -2.472357),
-            title: "Nicolas",
+            position: new google.maps.LatLng(-36.644417, 146.590571),
+            title: "Sam",
             label: "D",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.008987, -2.335814),
-            title: "Nicolas",
-            label: "T23",
+            position: new google.maps.LatLng(-36.076081, 145.819361),
+            title: "Sam",
+            label: "T2",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.049372, -2.495883),
-            title: "Nicolas",
-            label: "T25",
+            position: new google.maps.LatLng(-36.885474, 146.414399),
+            title: "Sam",
+            label: "T5",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.049372, -2.495883),
-            title: "Nicolas",
-            label: "T26",
+            position: new google.maps.LatLng(-36.644417, 146.590571),
+            title: "Sam",
+            label: "0",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.051849, -2.472357),
-            title: "Nicolas",
+            position: new google.maps.LatLng(-36.668908, 146.638506),
+            title: "David",
+            label: "D",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(-36.518091, 146.161826),
+            title: "David",
+            label: "T3",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(-36.668908, 146.638506),
+            title: "David",
             label: "0",
             icon: marker_icon_FF0000,
             map: map
@@ -176,14 +136,11 @@
             strokeWeight: 2,
             map: map,
             path: [
-                new google.maps.LatLng(40.164474, -2.587292),
-                new google.maps.LatLng(40.166813, -2.571247),
-                new google.maps.LatLng(40.031162, -2.680993),
-                new google.maps.LatLng(40.096582, -2.711648),
-                new google.maps.LatLng(40.056521, -2.725410),
-                new google.maps.LatLng(40.117044, -2.812485),
-                new google.maps.LatLng(40.166987, -2.640314),
-                new google.maps.LatLng(40.164474, -2.587292),
+                new google.maps.LatLng(-37.313914, 145.735695),
+                new google.maps.LatLng(-36.921593, 145.219754),
+                new google.maps.LatLng(-36.738221, 144.598415),
+                new google.maps.LatLng(-36.987485, 144.769250),
+                new google.maps.LatLng(-37.313914, 145.735695),
             ]
         });
 
@@ -195,12 +152,12 @@
             strokeWeight: 2,
             map: map,
             path: [
-                new google.maps.LatLng(40.208176, -2.679742),
-                new google.maps.LatLng(40.299072, -3.247438),
-                new google.maps.LatLng(40.218255, -3.107292),
-                new google.maps.LatLng(40.100519, -3.395876),
-                new google.maps.LatLng(40.012866, -3.605057),
-                new google.maps.LatLng(40.208176, -2.679742),
+                new google.maps.LatLng(-36.102979, 145.494369),
+                new google.maps.LatLng(-36.145489, 144.745313),
+                new google.maps.LatLng(-36.644417, 146.590571),
+                new google.maps.LatLng(-36.076081, 145.819361),
+                new google.maps.LatLng(-36.885474, 146.414399),
+                new google.maps.LatLng(-36.644417, 146.590571),
             ]
         });
 
@@ -212,11 +169,9 @@
             strokeWeight: 2,
             map: map,
             path: [
-                new google.maps.LatLng(40.051849, -2.472357),
-                new google.maps.LatLng(40.008987, -2.335814),
-                new google.maps.LatLng(40.049372, -2.495883),
-                new google.maps.LatLng(40.049372, -2.495883),
-                new google.maps.LatLng(40.051849, -2.472357),
+                new google.maps.LatLng(-36.668908, 146.638506),
+                new google.maps.LatLng(-36.518091, 146.161826),
+                new google.maps.LatLng(-36.668908, 146.638506),
             ]
         });
 
