--- a/projet_ST7/phase_2/gmplot_fichiers_phase2/Austria_gmplot.html
+++ b/projet_ST7/phase_2/gmplot_fichiers_phase2/Austria_gmplot.html
@@ -8,7 +8,7 @@
     function initialize() {
         var map = new google.maps.Map(document.getElementById("map_canvas"), {
             zoom: 10,
-            center: new google.maps.LatLng(47.752786, 15.978782)
+            center: new google.maps.LatLng(47.900418, 15.865050)
         });
 
         var marker_icon_FF0000 = {
@@ -19,55 +19,7 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(47.722831, 16.193356),
             title: "Ellen",
-            label: "0",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(47.691029, 15.978986),
-            title: "Ellen",
-            label: "T7",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(47.623501, 15.927956),
-            title: "Ellen",
-            label: "T20",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(47.645528, 15.907399),
-            title: "Ellen",
-            label: "T30",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(47.718508, 15.856215),
-            title: "Ellen",
-            label: "T6",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(47.798841, 15.814160),
-            title: "Ellen",
-            label: "T22",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(47.947702, 15.950039),
-            title: "Ellen",
-            label: "T27",
+            label: "D",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -81,9 +33,81 @@
         });
 
         new google.maps.Marker({
+            position: new google.maps.LatLng(47.947702, 15.950039),
+            title: "Ellen",
+            label: "T27",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(48.129326, 15.754151),
+            title: "Ellen",
+            label: "T1",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(48.174373, 15.768126),
+            title: "Ellen",
+            label: "T17",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(48.182121, 15.480502),
+            title: "Ellen",
+            label: "T15",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.912735, 15.539092),
+            title: "Ellen",
+            label: "T4",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.798841, 15.814160),
+            title: "Ellen",
+            label: "T22",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.718508, 15.856215),
+            title: "Ellen",
+            label: "T6",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.691029, 15.978986),
+            title: "Ellen",
+            label: "T7",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
             position: new google.maps.LatLng(47.722831, 16.193356),
             title: "Ellen",
             label: "0",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.597685, 15.785024),
+            title: "Alexander",
+            label: "D",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -97,17 +121,17 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(47.597685, 15.785024),
+            position: new google.maps.LatLng(47.645528, 15.907399),
             title: "Alexander",
-            label: "0",
+            label: "T30",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(47.508725, 15.979283),
+            position: new google.maps.LatLng(47.623501, 15.927956),
             title: "Alexander",
-            label: "T14",
+            label: "T20",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -129,9 +153,25 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(47.430093, 15.794309),
+            position: new google.maps.LatLng(47.160069, 15.910739),
             title: "Alexander",
-            label: "T23",
+            label: "T28",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.151374, 15.559485),
+            title: "Alexander",
+            label: "T12",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.399444, 15.535414),
+            title: "Alexander",
+            label: "T31",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -155,7 +195,7 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(48.188438, 14.861615),
             title: "Adam",
-            label: "0",
+            label: "D",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -169,17 +209,25 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(48.252195, 15.158680),
+            position: new google.maps.LatLng(48.178337, 15.143931),
             title: "Adam",
-            label: "T9",
+            label: "T24",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(48.178337, 15.143931),
+            position: new google.maps.LatLng(47.808981, 15.206235),
             title: "Adam",
-            label: "T24",
+            label: "T26",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.893446, 15.138992),
+            title: "Adam",
+            label: "T21",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -203,7 +251,7 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(48.069240, 14.484666),
             title: "Fabian",
-            label: "0",
+            label: "D",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -212,6 +260,38 @@
             position: new google.maps.LatLng(48.072686, 14.499672),
             title: "Fabian",
             label: "T13",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(48.252195, 15.158680),
+            title: "Fabian",
+            label: "T9",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.803338, 15.348212),
+            title: "Fabian",
+            label: "T3",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.828879, 15.253404),
+            title: "Fabian",
+            label: "T29",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.696360, 14.639145),
+            title: "Fabian",
+            label: "T18",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -227,7 +307,7 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(47.463328, 15.351096),
             title: "Carlotta",
-            label: "0",
+            label: "D",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -249,6 +329,22 @@
         });
 
         new google.maps.Marker({
+            position: new google.maps.LatLng(47.430093, 15.794309),
+            title: "Carlotta",
+            label: "T23",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(47.508725, 15.979283),
+            title: "Carlotta",
+            label: "T14",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
             position: new google.maps.LatLng(47.463328, 15.351096),
             title: "Carlotta",
             label: "0",
@@ -265,13 +361,15 @@
             map: map,
             path: [
                 new google.maps.LatLng(47.722831, 16.193356),
-                new google.maps.LatLng(47.691029, 15.978986),
-                new google.maps.LatLng(47.623501, 15.927956),
-                new google.maps.LatLng(47.645528, 15.907399),
-                new google.maps.LatLng(47.718508, 15.856215),
-                new google.maps.LatLng(47.798841, 15.814160),
-                new google.maps.LatLng(47.947702, 15.950039),
                 new google.maps.LatLng(47.904305, 15.987572),
+                new google.maps.LatLng(47.947702, 15.950039),
+                new google.maps.LatLng(48.129326, 15.754151),
+                new google.maps.LatLng(48.174373, 15.768126),
+                new google.maps.LatLng(48.182121, 15.480502),
+                new google.maps.LatLng(47.912735, 15.539092),
+                new google.maps.LatLng(47.798841, 15.814160),
+                new google.maps.LatLng(47.718508, 15.856215),
+                new google.maps.LatLng(47.691029, 15.978986),
                 new google.maps.LatLng(47.722831, 16.193356),
             ]
         });
@@ -286,10 +384,13 @@
             path: [
                 new google.maps.LatLng(47.597685, 15.785024),
                 new google.maps.LatLng(47.597685, 15.785024),
-                new google.maps.LatLng(47.508725, 15.979283),
+                new google.maps.LatLng(47.645528, 15.907399),
+                new google.maps.LatLng(47.623501, 15.927956),
                 new google.maps.LatLng(47.381618, 16.094357),
                 new google.maps.LatLng(47.307187, 16.029526),
-                new google.maps.LatLng(47.430093, 15.794309),
+                new google.maps.LatLng(47.160069, 15.910739),
+                new google.maps.LatLng(47.151374, 15.559485),
+                new google.maps.LatLng(47.399444, 15.535414),
                 new google.maps.LatLng(47.465584, 15.662254),
                 new google.maps.LatLng(47.597685, 15.785024),
             ]
@@ -305,8 +406,9 @@
             path: [
                 new google.maps.LatLng(48.188438, 14.861615),
                 new google.maps.LatLng(48.233278, 15.094242),
-                new google.maps.LatLng(48.252195, 15.158680),
                 new google.maps.LatLng(48.178337, 15.143931),
+                new google.maps.LatLng(47.808981, 15.206235),
+                new google.maps.LatLng(47.893446, 15.138992),
                 new google.maps.LatLng(48.188438, 14.861615),
                 new google.maps.LatLng(48.188438, 14.861615),
             ]
@@ -322,6 +424,10 @@
             path: [
                 new google.maps.LatLng(48.069240, 14.484666),
                 new google.maps.LatLng(48.072686, 14.499672),
+                new google.maps.LatLng(48.252195, 15.158680),
+                new google.maps.LatLng(47.803338, 15.348212),
+                new google.maps.LatLng(47.828879, 15.253404),
+                new google.maps.LatLng(47.696360, 14.639145),
                 new google.maps.LatLng(48.069240, 14.484666),
             ]
         });
@@ -337,6 +443,8 @@
                 new google.maps.LatLng(47.463328, 15.351096),
                 new google.maps.LatLng(47.463328, 15.351096),
                 new google.maps.LatLng(47.240070, 15.429835),
+                new google.maps.LatLng(47.430093, 15.794309),
+                new google.maps.LatLng(47.508725, 15.979283),
                 new google.maps.LatLng(47.463328, 15.351096),
             ]
         });
