'plusieurs_indisponibilites_phase3'

--- a/projet_ST7/phase_2/gmplot_fichiers_phase2/Poland_gmplot.html
+++ b/projet_ST7/phase_2/gmplot_fichiers_phase2/Poland_gmplot.html
@@ -8,7 +8,7 @@
     function initialize() {
         var map = new google.maps.Map(document.getElementById("map_canvas"), {
             zoom: 10,
-            center: new google.maps.LatLng(54.049979, 21.973283)
+            center: new google.maps.LatLng(54.044039, 21.968025)
         });
 
         var marker_icon_FF0000 = {
@@ -19,11 +19,15 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(53.884824, 22.047724),
             title: "Irena",
-<<<<<<< HEAD
             label: "D",
-=======
-            label: "0",
->>>>>>> b12d0d54500ce8ad9619c033362492b16d8c8296
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.990579, 21.920705),
+            title: "Irena",
+            label: "T7",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -95,11 +99,7 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(53.283383, 20.748090),
             title: "Karol",
-<<<<<<< HEAD
             label: "D",
-=======
-            label: "0",
->>>>>>> b12d0d54500ce8ad9619c033362492b16d8c8296
             icon: marker_icon_FF0000,
             map: map
         });
@@ -113,29 +113,17 @@
         });
 
         new google.maps.Marker({
-<<<<<<< HEAD
-            position: new google.maps.LatLng(53.297018, 20.754323),
-            title: "Karol",
-            label: "T18",
-=======
             position: new google.maps.LatLng(53.291469, 20.715902),
             title: "Karol",
             label: "T11",
->>>>>>> b12d0d54500ce8ad9619c033362492b16d8c8296
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-<<<<<<< HEAD
-            position: new google.maps.LatLng(53.312474, 20.756064),
-            title: "Karol",
-            label: "T13",
-=======
             position: new google.maps.LatLng(53.331325, 20.706078),
             title: "Karol",
             label: "T6",
->>>>>>> b12d0d54500ce8ad9619c033362492b16d8c8296
             icon: marker_icon_FF0000,
             map: map
         });
@@ -149,25 +137,14 @@
         });
 
         new google.maps.Marker({
-<<<<<<< HEAD
-            position: new google.maps.LatLng(53.331325, 20.706078),
-            title: "Karol",
-            label: "T6",
-=======
             position: new google.maps.LatLng(53.312474, 20.756064),
             title: "Karol",
             label: "T13",
->>>>>>> b12d0d54500ce8ad9619c033362492b16d8c8296
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-<<<<<<< HEAD
-            position: new google.maps.LatLng(53.291469, 20.715902),
-            title: "Karol",
-            label: "T11",
-=======
             position: new google.maps.LatLng(53.297018, 20.754323),
             title: "Karol",
             label: "T18",
@@ -179,7 +156,22 @@
             position: new google.maps.LatLng(53.274646, 20.910288),
             title: "Karol",
             label: "T4",
->>>>>>> b12d0d54500ce8ad9619c033362492b16d8c8296
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.032250, 21.049135),
+            title: "Karol",
+            label: "T12",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.034872, 20.772421),
+            title: "Karol",
+            label: "T9",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -209,6 +201,7 @@
             map: map,
             path: [
                 new google.maps.LatLng(53.884824, 22.047724),
+                new google.maps.LatLng(53.990579, 21.920705),
                 new google.maps.LatLng(53.884824, 22.047724),
                 new google.maps.LatLng(54.081859, 21.934990),
                 new google.maps.LatLng(54.166649, 21.896723),
@@ -230,20 +223,14 @@
             path: [
                 new google.maps.LatLng(53.283383, 20.748090),
                 new google.maps.LatLng(53.285398, 20.746874),
-<<<<<<< HEAD
-                new google.maps.LatLng(53.297018, 20.754323),
-                new google.maps.LatLng(53.312474, 20.756064),
-                new google.maps.LatLng(53.322580, 20.728824),
-                new google.maps.LatLng(53.331325, 20.706078),
-                new google.maps.LatLng(53.291469, 20.715902),
-=======
                 new google.maps.LatLng(53.291469, 20.715902),
                 new google.maps.LatLng(53.331325, 20.706078),
                 new google.maps.LatLng(53.322580, 20.728824),
                 new google.maps.LatLng(53.312474, 20.756064),
                 new google.maps.LatLng(53.297018, 20.754323),
                 new google.maps.LatLng(53.274646, 20.910288),
->>>>>>> b12d0d54500ce8ad9619c033362492b16d8c8296
+                new google.maps.LatLng(53.032250, 21.049135),
+                new google.maps.LatLng(53.034872, 20.772421),
                 new google.maps.LatLng(53.264781, 20.737952),
                 new google.maps.LatLng(53.283383, 20.748090),
             ]
