--- a/projet_ST7/phase_2/gmplot_fichiers_phase2/Spain_gmplot.html
+++ b/projet_ST7/phase_2/gmplot_fichiers_phase2/Spain_gmplot.html
@@ -8,7 +8,7 @@
     function initialize() {
         var map = new google.maps.Map(document.getElementById("map_canvas"), {
             zoom: 10,
-            center: new google.maps.LatLng(40.120507, -2.664585)
+            center: new google.maps.LatLng(40.153093, -2.701246)
         });
 
         var marker_icon_FF0000 = {
@@ -33,14 +33,6 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.031162, -2.680993),
-            title: "Juan",
-            label: "T20",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
             position: new google.maps.LatLng(40.096582, -2.711648),
             title: "Juan",
             label: "-1",
@@ -57,17 +49,25 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.117044, -2.812485),
+            position: new google.maps.LatLng(40.031162, -2.680993),
             title: "Juan",
-            label: "T5",
+            label: "T20",
             icon: marker_icon_FF0000,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.166987, -2.640314),
+            position: new google.maps.LatLng(40.219973, -2.860116),
             title: "Juan",
-            label: "T1",
+            label: "T12",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(40.324747, -2.885967),
+            title: "Juan",
+            label: "T9",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -89,9 +89,33 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(40.299072, -3.247438),
+            position: new google.maps.LatLng(40.166987, -2.640314),
             title: "Maria",
-            label: "T24",
+            label: "T1",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(40.117044, -2.812485),
+            title: "Maria",
+            label: "T5",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(40.108080, -2.899145),
+            title: "Maria",
+            label: "T14",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(40.185551, -2.917858),
+            title: "Maria",
+            label: "T2",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -178,11 +202,11 @@
             path: [
                 new google.maps.LatLng(40.164474, -2.587292),
                 new google.maps.LatLng(40.166813, -2.571247),
-                new google.maps.LatLng(40.031162, -2.680993),
                 new google.maps.LatLng(40.096582, -2.711648),
                 new google.maps.LatLng(40.056521, -2.725410),
-                new google.maps.LatLng(40.117044, -2.812485),
-                new google.maps.LatLng(40.166987, -2.640314),
+                new google.maps.LatLng(40.031162, -2.680993),
+                new google.maps.LatLng(40.219973, -2.860116),
+                new google.maps.LatLng(40.324747, -2.885967),
                 new google.maps.LatLng(40.164474, -2.587292),
             ]
         });
@@ -196,7 +220,10 @@
             map: map,
             path: [
                 new google.maps.LatLng(40.208176, -2.679742),
-                new google.maps.LatLng(40.299072, -3.247438),
+                new google.maps.LatLng(40.166987, -2.640314),
+                new google.maps.LatLng(40.117044, -2.812485),
+                new google.maps.LatLng(40.108080, -2.899145),
+                new google.maps.LatLng(40.185551, -2.917858),
                 new google.maps.LatLng(40.218255, -3.107292),
                 new google.maps.LatLng(40.100519, -3.395876),
                 new google.maps.LatLng(40.012866, -3.605057),
