ça avance ça avance

--- a/projet_ST7/phase_3/gmplot_fichiers_phase3/Bordeaux_gmplot.html
+++ b/projet_ST7/phase_3/gmplot_fichiers_phase3/Bordeaux_gmplot.html
@@ -206,7 +206,7 @@
         new google.maps.Polyline({
             clickable: false,
             geodesic: true,
-            strokeColor: "#000000",
+            strokeColor: "#F0F8FF",
             strokeOpacity: 1.000000,
             strokeWeight: 2,
             map: map,
@@ -224,7 +224,7 @@
         new google.maps.Polyline({
             clickable: false,
             geodesic: true,
-            strokeColor: "#FF0000",
+            strokeColor: "#FAEBD7",
             strokeOpacity: 1.000000,
             strokeWeight: 2,
             map: map,
