--- a/projet_ST7/phase_3/gmplot_fichiers_phase3/Bordeaux_gmplot.html
+++ b/projet_ST7/phase_3/gmplot_fichiers_phase3/Bordeaux_gmplot.html
@@ -17,20 +17,6 @@
         };
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(44.936309, -0.830941),
-            label: "0",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(45.151218, -0.822093),
-            label: "-1",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
             position: new google.maps.LatLng(44.967501, -0.608685),
             label: "T2",
             icon: marker_icon_FF0000,
@@ -238,7 +224,7 @@
         new google.maps.Polyline({
             clickable: false,
             geodesic: true,
-            strokeColor: "#008000",
+            strokeColor: "#0000FF",
             strokeOpacity: 1.000000,
             strokeWeight: 2,
             map: map,
