22h03 le début de la fin

--- a/projet_ST7/phase_3/gmplot_fichiers_phase3/Poland_gmplot.html
+++ b/projet_ST7/phase_3/gmplot_fichiers_phase3/Poland_gmplot.html
@@ -31,29 +31,8 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(53.264781, 20.737952),
-            label: "T3",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(53.274646, 20.910288),
-            label: "T4",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
             position: new google.maps.LatLng(54.007961, 22.012200),
             label: "T5",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(53.331325, 20.706078),
-            label: "T6",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -73,36 +52,8 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(53.034872, 20.772421),
-            label: "T9",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
             position: new google.maps.LatLng(54.100773, 22.226403),
             label: "T10",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(53.291469, 20.715902),
-            label: "T11",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(53.032250, 21.049135),
-            label: "T12",
-            icon: marker_icon_FF0000,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(53.312474, 20.756064),
-            label: "T13",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -124,6 +75,55 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(54.212953, 22.059626),
             label: "T16",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.264781, 20.737952),
+            label: "T3",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.274646, 20.910288),
+            label: "T4",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.331325, 20.706078),
+            label: "T6",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.034872, 20.772421),
+            label: "T9",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.291469, 20.715902),
+            label: "T11",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.032250, 21.049135),
+            label: "T12",
+            icon: marker_icon_FF0000,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.312474, 20.756064),
+            label: "T13",
             icon: marker_icon_FF0000,
             map: map
         });
@@ -157,15 +157,15 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(53.884824, 22.047724),
             title: "Irena",
-            label: "D",
+            label: "0",
             icon: marker_icon_90EE90,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(53.990579, 21.920705),
+            position: new google.maps.LatLng(54.007961, 22.012200),
             title: "Irena",
-            label: "T7",
+            label: "T5",
             icon: marker_icon_90EE90,
             map: map
         });
@@ -187,17 +187,9 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(54.166649, 21.896723),
+            position: new google.maps.LatLng(54.166404, 21.960452),
             title: "Irena",
-            label: "T2",
-            icon: marker_icon_90EE90,
-            map: map
-        });
-
-        new google.maps.Marker({
-            position: new google.maps.LatLng(54.175281, 21.881083),
-            title: "Irena",
-            label: "T15",
+            label: "T8",
             icon: marker_icon_90EE90,
             map: map
         });
@@ -211,17 +203,25 @@
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(54.166404, 21.960452),
+            position: new google.maps.LatLng(54.175281, 21.881083),
             title: "Irena",
-            label: "T8",
+            label: "T15",
             icon: marker_icon_90EE90,
             map: map
         });
 
         new google.maps.Marker({
-            position: new google.maps.LatLng(54.007961, 22.012200),
+            position: new google.maps.LatLng(54.166649, 21.896723),
             title: "Irena",
-            label: "T5",
+            label: "T2",
+            icon: marker_icon_90EE90,
+            map: map
+        });
+
+        new google.maps.Marker({
+            position: new google.maps.LatLng(53.990579, 21.920705),
+            title: "Irena",
+            label: "T7",
             icon: marker_icon_90EE90,
             map: map
         });
@@ -237,7 +237,7 @@
         new google.maps.Marker({
             position: new google.maps.LatLng(53.283383, 20.748090),
             title: "Karol",
-            label: "D",
+            label: "0",
             icon: marker_icon_90EE90,
             map: map
         });
@@ -333,20 +333,20 @@
         new google.maps.Polyline({
             clickable: false,
             geodesic: true,
-            strokeColor: "#000000",
+            strokeColor: "#FF0000",
             strokeOpacity: 1.000000,
             strokeWeight: 2,
             map: map,
             path: [
                 new google.maps.LatLng(53.884824, 22.047724),
-                new google.maps.LatLng(53.990579, 21.920705),
+                new google.maps.LatLng(54.007961, 22.012200),
                 new google.maps.LatLng(53.884824, 22.047724),
                 new google.maps.LatLng(54.081859, 21.934990),
-                new google.maps.LatLng(54.166649, 21.896723),
-                new google.maps.LatLng(54.175281, 21.881083),
-                new google.maps.LatLng(54.197184, 21.930926),
                 new google.maps.LatLng(54.166404, 21.960452),
-                new google.maps.LatLng(54.007961, 22.012200),
+                new google.maps.LatLng(54.197184, 21.930926),
+                new google.maps.LatLng(54.175281, 21.881083),
+                new google.maps.LatLng(54.166649, 21.896723),
+                new google.maps.LatLng(53.990579, 21.920705),
                 new google.maps.LatLng(53.884824, 22.047724),
             ]
         });
@@ -354,7 +354,7 @@
         new google.maps.Polyline({
             clickable: false,
             geodesic: true,
-            strokeColor: "#FF0000",
+            strokeColor: "#0000FF",
             strokeOpacity: 1.000000,
             strokeWeight: 2,
             map: map,
